# robodrivers

./: .gitignore  README.md  docker-compose.yml
client/: Dockerfile  actions.py  agent.py  drl.py  env.py  heuristic_policy.py  observation.py  policy.py  random_policy.py  rl_policy.py  roboclient.py  roborl.py  rpc.py  rust_bindings.py  websocket.py
robodrivers/: Cargo.toml  client.py  clippy.toml  config.yaml  game_state_base.yaml
robodrivers/pyclient/: random_policy.py  roboclient.py  rpc.py  rust_bindings.py  websocket.py
robodrivers/src/: actions.rs  lib.rs
robodrivers/tests/: integration_tests.rs
robodrivers/web/: index.html  main.js
server/: Cargo.toml_deps  Dockerfile  LICENSE.md  game_state_base.yaml
server/config/: config.yaml  game_state_base.yaml
server/src/: lib.rs  rpc.rs
server/tests/common/: mod.rs
web/: Dockerfile
web/www/: index.html  main.css  main.js
web/www/assets/: atlas.json
web/www/assets/atlas_project/: UIAtlasExtrude.tps
